--- a/index.html
+++ b/index.html
@@ -5,9 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Assignement Portal Structure</title>
 </head>
 <body>
+    <header>
+    <img src="images/josy.png" alt="my picture">
+    <h6>JOSEPHINE M. NZIOKA</h6>
+
+    <H1>WDD 230: Assignement Portal</H1>
+</header>
+<Ul>
+    <li>Lesson 02: Title</li>
+    <li>Lesson 03: Title</li>
+    <li>Lesson 04: Title</li>
+    <li>Lesson 05: Title</li>
+    <li>Lesson 06: Title</li>
+    <li>Lesson 07: Title</li>
+    <li>Lesson 08: TitleLesson 02: Title</li>
+    <li>Lesson 09: Title</li>
+    <li>Lesson 10: Title</li>
+    <li>Lesson 11: Title</li>
+    <li>Lesson 12: Title</li>
+</Ul>
+    
+
+
     <script src="main.js"></script>
 </body>
 </html>
